@@ -36,6 +36,11 @@ android {
     buildFeatures {
         viewBinding = true
     }
+    testOptions {
+        unitTests.all {
+            jvmArgs '-XX:+EnableDynamicAgentLoading'
+        }
+    }
 }
 tasks.withType(Test) {
     testLogging {
